Fix list padding on mobile
Close #1

--- a/.gliki/less/hgpa.less
+++ b/.gliki/less/hgpa.less
@@ -82,6 +82,10 @@ pre code {
     margin: 20px auto 10px auto;
   }
   
+  ul, ol {
+    padding-left: 20px;
+  }
+  
   .gliki-metadata {
     margin: 20px auto 10px;
     padding: 10px 0;
